<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/royal_purple"
    tools:context=".UploadResume">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_marginTop="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Review"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text=""
            android:inputType="textMultiLine"
            android:minLines="5"
            android:gravity="top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Interview Process"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/process"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text=""
            android:inputType="textMultiLine"
            android:minLines="5"
            android:layout_marginBottom="50dp"
            android:gravity="top" />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Rating out of 5"-->
<!--            android:textSize="18sp"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_marginTop="16dp" />-->

        <EditText
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Overall Rating Out of 5:"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:layout_marginBottom="30dp"
            android:gravity="top" />


        <Button
            android:id="@+id/submitreview"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/dark_royal_purple"
            android:text="Submit Review" />

    </LinearLayout>

</ScrollView>