<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/alt_img"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="268dp"
        android:layout_height="195dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alt_act_img" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="Sign In"

        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="10dp" >


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_text_field_styling"
            android:layout_height="55dp"
            android:fontFamily="@font/poppinsmedium"
            android:hint="Email"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="7dp"
            android:paddingLeft="10dp"
            android:background="@drawable/input_text_field_styling"
            android:fontFamily="@font/poppinsmedium"
            android:hint="Password"/>

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsbold"
            android:text="Sign In"
            android:padding="18dp"
            android:background="@drawable/main_btn_styling"
            android:textFontWeight="700"
            android:textColor="@color/dark_royal_purple"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/go_to_sign_up"
            android:textColor="@color/tropical_blue"
            android:textSize="18sp"
            android:onClick="goToSigUpAct"
            />


    </LinearLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_royal_purple"
        android:onClick="goToHome"
        android:padding="10dp"
        android:fontFamily="@font/poppinsbold"
        android:text="Back To Home"
        android:textColor="@color/tropical_blue"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.165" />


</androidx.constraintlayout.widget.ConstraintLayout>